# receive-mkdocs-pages

./: Cargo.toml  README.md  go.mod
cmd/receiver/: .gitignore  main.go
src/: main.rs
