[package]
name = "receive-mkdocs-pages"
version = "0.1.0"
authors = ["Rasmus Karlsson <rasmus.karlsson@pajlada.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.2.3" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
serde = { version = "1.0", features = ["derive"] }
